@@ -2,19 +2,14 @@ package io.contexa.contexacore.autonomous.tiered.strategy;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.contexa.contexacore.autonomous.config.FeedbackIntegrationProperties;
 import io.contexa.contexacore.autonomous.domain.SecurityEvent;
 import io.contexa.contexacore.autonomous.domain.ThreatAssessment;
 import io.contexa.contexacore.autonomous.tiered.SecurityDecision;
 import io.contexa.contexacore.autonomous.tiered.response.Layer2SecurityResponse;
 import io.contexa.contexacore.autonomous.tiered.template.Layer2PromptTemplate;
 import io.contexa.contexacore.autonomous.tiered.util.SecurityEventEnricher;
-import io.contexa.contexacore.autonomous.utils.ZeroTrustRedisKeys;
 import io.contexa.contexacore.domain.VectorDocumentType;
 import io.contexa.contexacore.domain.entity.ThreatIndicator;
-import io.contexa.contexacommon.hcad.domain.BaselineVector;
-import io.contexa.contexacommon.hcad.domain.HCADContext;
-import io.contexa.contexacore.hcad.service.HCADVectorIntegrationService;
 import io.contexa.contexacore.hcad.service.BaselineLearningService;
 import io.contexa.contexacore.std.labs.behavior.BehaviorVectorService;
 import io.contexa.contexacore.std.llm.core.ExecutionContext;
@@ -26,8 +21,9 @@ import org.springframework.ai.document.Document;
 import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.Cursor;
 import org.springframework.data.redis.core.RedisTemplate;
-import org.springframework.stereotype.Component;
+import org.springframework.data.redis.core.ScanOptions;
 import reactor.core.publisher.Mono;
 
 import java.time.Duration;
@@ -50,7 +46,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
     private final RedisTemplate<String, Object> redisTemplate;
     private final SecurityEventEnricher eventEnricher;
     private final Layer2PromptTemplate promptTemplate;
-    private final HCADVectorIntegrationService localHcadVectorService;
     private final BehaviorVectorService behaviorVectorService;
     private final UnifiedVectorService unifiedVectorService;
     private final BaselineLearningService baselineLearningService;
@@ -64,9 +59,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
     @Value("${spring.ai.security.tiered.layer2.timeout-ms:10000}")
     private long timeoutMs;
 
-    @Value("${spring.ai.security.tiered.layer2.context-window-minutes:30}")
-    private int contextWindowMinutes;
-
     @Value("${spring.ai.security.tiered.layer2.vector-search-limit:10}")
     private int vectorSearchLimit;
 
@@ -76,75 +68,42 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
                                     @Autowired(required = false) RedisTemplate<String, Object> redisTemplate,
                                     @Autowired(required = false) SecurityEventEnricher eventEnricher,
                                     @Autowired(required = false) Layer2PromptTemplate promptTemplate,
-                                    @Autowired(required = false) HCADVectorIntegrationService hcadVectorService,
                                     @Autowired(required = false) BehaviorVectorService behaviorVectorService,
-                                    @Autowired FeedbackIntegrationProperties feedbackProperties,
                                     @Autowired(required = false) BaselineLearningService baselineLearningService) {
         this.llmOrchestrator = llmOrchestrator;
         this.unifiedVectorService = unifiedVectorService;
         this.redisTemplate = redisTemplate;
         this.eventEnricher = eventEnricher != null ? eventEnricher : new SecurityEventEnricher();
         this.promptTemplate = promptTemplate != null ? promptTemplate : new Layer2PromptTemplate(eventEnricher);
-        this.localHcadVectorService = hcadVectorService;
         this.behaviorVectorService = behaviorVectorService;
         this.baselineLearningService = baselineLearningService;
-        this.hcadVectorService = hcadVectorService;
-        this.feedbackProperties = feedbackProperties;
 
         log.info("Layer 2 Contextual Strategy initialized with UnifiedLLMOrchestrator");
         log.info("  - Model: {}", modelName);
         log.info("  - Timeout: {}ms", timeoutMs);
-        log.info("  - Context Window: {} minutes", contextWindowMinutes);
         log.info("  - UnifiedVectorService available: {}", unifiedVectorService != null);
         log.info("  - BaselineLearningService available: {}", baselineLearningService != null);
     }
 
-    /**
-     * ThreatEvaluationStrategy 인터페이스 구현
-     * ColdPathEventProcessorRefactored에서 전략으로 사용됨
-     *
-     * AI Native 전환:
-     * - LLM이 ESCALATE 반환 시 shouldEscalate = true
-     * - LLM이 threatLevel을 직접 결정 (규칙 기반 매핑 제거)
-     */
     @Override
     public ThreatAssessment evaluate(SecurityEvent event) {
         log.info("Layer 2 Contextual Strategy evaluating event: {}", event.getEventId());
-
-        // Layer1 결정을 기본값으로 생성
         SecurityDecision layer1Decision = createDefaultDecision();
-
-        // 컨텍스트 분석 실행
         SecurityDecision decision = analyzeWithContext(event, layer1Decision);
-
-        // AI Native: LLM이 ESCALATE 액션을 반환하면 shouldEscalate = true
         boolean shouldEscalate = decision.getAction() == SecurityDecision.Action.ESCALATE;
-
-        // AI Native: LLM이 결정한 action을 그대로 사용
         String action = decision.getAction() != null ? decision.getAction().name() : "ESCALATE";
-
-        // SecurityDecision을 ThreatAssessment로 변환
         return ThreatAssessment.builder()
                 .riskScore(decision.getRiskScore())
                 .confidence(decision.getConfidence())
-                // AI Native: LLM이 threatLevel을 직접 결정하도록 수정 필요
                 .threatLevel(null)
                 .indicators(new ArrayList<>())
-                .recommendedActions(Arrays.asList(mapActionToRecommendation(decision.getAction())))
+                .recommendedActions(List.of(mapActionToRecommendation(decision.getAction())))
                 .strategyName("Layer2-Contextual")
-                .assessedAt(LocalDateTime.now())
                 .shouldEscalate(shouldEscalate)
                 .action(action)  // AI Native: LLM action 직접 저장
                 .build();
     }
 
-    /**
-     * 컨텍스트를 포함한 이벤트 분석
-     *
-     * @param event 보안 이벤트
-     * @param layer1Decision Layer 1의 결정
-     * @return 향상된 보안 결정
-     */
     public SecurityDecision analyzeWithContext(SecurityEvent event, SecurityDecision layer1Decision) {
         long startTime = System.currentTimeMillis();
 
@@ -152,8 +111,8 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
             // 1. 세션 컨텍스트 수집
             SessionContext sessionContext = buildSessionContext(event);
 
-            // 3. 행동 패턴 분석
-            BehaviorAnalysis behaviorAnalysis = analyzeBehaviorPatterns(event, sessionContext);
+            // 3. 행동 패턴 분석 (Phase 8: sessionContext 파라미터 제거 - 미사용)
+            BehaviorAnalysis behaviorAnalysis = analyzeBehaviorPatterns(event);
 
             // 4. 벡터 스토어에서 관련 컨텍스트 검색
             List<Document> relatedDocuments = searchRelatedContext(event);
@@ -164,9 +123,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
 
             String promptText = promptTemplate.buildPrompt(event, layer1Decision, sessionCtx, behaviorCtx, relatedDocuments);
 
-            // 5. LLM 분석 실행 - execute() + 수동 JSON 파싱
-            // BeanOutputConverter 제거로 2500+ 토큰 → 500 토큰 (80% 감소!)
-            // 예상 성능: 3-5초 → 100-300ms (15-50배 개선!)
             Layer2SecurityResponse response = null;
             if (llmOrchestrator != null) {
                 ExecutionContext context = ExecutionContext.builder()
@@ -178,8 +134,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
                         .requestId(event.getEventId())
                         .build();
 
-                // AI Native: onErrorResume에서 규칙 기반 기본값 제거
-                // riskScore/confidence를 null로 반환하여 NaN 처리
                 String jsonResponse = llmOrchestrator.execute(context)
                         .timeout(Duration.ofMillis(timeoutMs))
                         .onErrorResume(Exception.class, e -> {
@@ -207,9 +161,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
 
             // 9. 벡터 스토어에 저장 (학습용)
             storeInVectorDatabase(event, decision);
-
-            // 10. Cold→Hot 동기화 (riskScore >= 0.7)
-            feedbackToHotPath(event, decision);
 
             log.info("Layer 2 analysis completed in {}ms - Risk: {}, Action: {}",
                     decision.getProcessingTimeMs(), decision.getRiskScore(), decision.getAction());
@@ -289,188 +240,29 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         return context;
     }
 
-    /**
-     * 행동 패턴 분석 - AI Native: Baseline 컨텍스트 포함 (v3.0)
-     */
-    private BehaviorAnalysis analyzeBehaviorPatterns(SecurityEvent event, SessionContext sessionContext) {
+    private BehaviorAnalysis analyzeBehaviorPatterns(SecurityEvent event) {
         BehaviorAnalysis analysis = new BehaviorAnalysis();
         String userId = event.getUserId();
 
-        // 정상 행동 점수 계산
-        double normalScore = calculateNormalBehaviorScore(event, sessionContext);
-        analysis.setNormalBehaviorScore(normalScore);
-
-        // 이상 징후 탐지 (빈 리스트 방지)
-        List<String> anomalies = detectAnomalies(event, sessionContext);
-        if (anomalies.isEmpty()) {
-            anomalies.add("[NO_BASELINE: insufficient historical data for anomaly detection]");
-        }
-        analysis.setAnomalyIndicators(anomalies);
-
-        // 시간적 패턴 분석 (항상 정보 제공)
-        String temporalPattern = analyzeTemporalPattern(event);
-        analysis.setTemporalPattern(temporalPattern);
-
-        // 유사 이벤트 조회 (빈 리스트 방지)
+        // 유사 이벤트 조회 (유지 - raw 데이터)
         List<String> similarEvents = findSimilarEvents(event);
         if (similarEvents.isEmpty()) {
             similarEvents.add("[FIRST_EVENT: no previous similar events found]");
         }
         analysis.setSimilarEvents(similarEvents);
 
-        // AI Native: Baseline 컨텍스트 및 편차 분석 (v3.0)
         if (baselineLearningService != null && userId != null) {
             analysis.setBaselineContext(baselineLearningService.buildBaselinePromptContext(userId, event));
-            analysis.setDeviationAnalysis(baselineLearningService.analyzeDeviations(userId, event));
-            analysis.setDeviationScore(baselineLearningService.calculateDeviationScore(userId, event));
             analysis.setBaselineEstablished(baselineLearningService.getBaseline(userId) != null);
-            log.debug("[Layer2] Baseline context generated for user {}: deviationScore={}",
-                userId, analysis.getDeviationScore());
+            log.debug("[Layer2] Baseline context generated for user {}", userId);
         } else {
             analysis.setBaselineContext(null);
-            analysis.setDeviationAnalysis(null);
-            analysis.setDeviationScore(Double.NaN);
             analysis.setBaselineEstablished(false);
         }
 
         return analysis;
     }
 
-    /**
-     * 정상 행동 점수 계산 - Vector-based
-     */
-    private double calculateNormalBehaviorScore(SecurityEvent event, SessionContext context) {
-        if (localHcadVectorService == null) {
-            return calculateNormalBehaviorScoreFallback(event, context);
-        }
-
-        try {
-            HCADContext hcadContext = convertToHCADContext(event, context);
-            float[] contextEmbedding = localHcadVectorService.generateContextEmbedding(hcadContext);
-            double anomalyScore = localHcadVectorService.calculateRealTimeAnomalyScore(
-                    contextEmbedding,
-                    event.getUserId() != null ? event.getUserId() : "unknown"
-            );
-            return Math.max(0.1, 1.0 - anomalyScore);
-        } catch (Exception e) {
-            log.warn("Vector-based score calculation failed, using fallback", e);
-            return calculateNormalBehaviorScoreFallback(event, context);
-        }
-    }
-
-    /**
-     * AI Native: 규칙 기반 Fallback 완전 제거
-     * - 세션 시간, 접근 빈도, IP 일치, 시간대 규칙 모두 제거
-     * - Vector 서비스 실패 시 LLM 분석 필요 상태를 NaN으로 표시
-     * - LLM이 컨텍스트를 분석하여 점수를 직접 판단해야 함
-     */
-    private double calculateNormalBehaviorScoreFallback(SecurityEvent event, SessionContext context) {
-        log.warn("[Layer2][AI Native] Vector service unavailable, returning NaN for LLM to analyze");
-        return Double.NaN;
-    }
-
-    /**
-     * 이상 징후 탐지 - Vector + Z-Score 기반
-     */
-    private List<String> detectAnomalies(SecurityEvent event, SessionContext context) {
-        List<String> anomalies = new ArrayList<>();
-
-        if (localHcadVectorService == null) {
-            return detectAnomaliesFallback(event, context);
-        }
-
-        try {
-            HCADContext hcadContext = convertToHCADContext(event, context);
-            float[] contextEmbedding = localHcadVectorService.generateContextEmbedding(hcadContext);
-            String userId = event.getUserId() != null ? event.getUserId() : "unknown";
-            double anomalyScore = localHcadVectorService.calculateRealTimeAnomalyScore(contextEmbedding, userId);
-
-            if (anomalyScore > 0.7) {
-                anomalies.add(String.format("High vector-based anomaly score: %.2f", anomalyScore));
-            }
-
-            BaselineVector baseline = getOrCreateBaseline(userId);
-            if (baseline != null && baseline.getUpdateCount() > 10) {
-                double zScore = baseline.calculateZScore(anomalyScore);
-                if (zScore > 2.5) {
-                    anomalies.add(String.format("Statistical outlier detected (Z-score: %.2f)", zScore));
-                }
-            }
-
-            String currentScenario = hcadVectorService.detectScenario(hcadContext);
-            String expectedScenario = baseline != null ? baseline.getActiveScenario() : null;
-            if (expectedScenario != null && !expectedScenario.equals(currentScenario)) {
-                anomalies.add(String.format("Unexpected scenario: expected %s, got %s", expectedScenario, currentScenario));
-            }
-
-            if (baseline != null && !isIpInNormalRange(event.getSourceIp(), baseline)) {
-                anomalies.add("IP address change detected: " + event.getSourceIp());
-            }
-
-        } catch (Exception e) {
-            log.warn("Vector-based anomaly detection failed, using fallback", e);
-            return detectAnomaliesFallback(event, context);
-        }
-
-        return anomalies;
-    }
-
-    /**
-     * AI Native: 규칙 기반 Fallback 완전 제거
-     * - 접근 빈도, IP 변경, 시간대, 권한 상승 규칙 모두 제거
-     * - Vector 서비스 실패 시 빈 리스트 반환 (LLM이 직접 판단)
-     * - LLM이 이상 징후를 컨텍스트 분석으로 직접 탐지해야 함
-     */
-    private List<String> detectAnomaliesFallback(SecurityEvent event, SessionContext context) {
-        log.warn("[Layer2][AI Native] Vector service unavailable, anomaly detection delegated to LLM");
-        return new ArrayList<>();
-    }
-
-    /**
-     * 시간적 패턴 분석 - Scenario Detection
-     */
-    private String analyzeTemporalPattern(SecurityEvent event) {
-        if (hcadVectorService == null) {
-            return analyzeTemporalPatternFallback(event);
-        }
-
-        try {
-            HCADContext hcadContext = convertToHCADContext(event, buildSessionContext(event));
-            String scenario = hcadVectorService.detectScenario(hcadContext);
-
-            Map<String, String> scenarioDescriptions = Map.of(
-                    "weekday_office", "업무 시간대 사내 네트워크 접속",
-                    "weekday_remote", "업무 시간대 외부 네트워크 접속",
-                    "weekday_mobile", "업무 시간대 모바일 접속",
-                    "evening_activity", "저녁 시간대 활동",
-                    "night_activity", "야간 시간대 활동 (주의 필요)",
-                    "weekend_home", "주말 가정 네트워크 접속",
-                    "weekend_external", "주말 외부 네트워크 접속",
-                    "early_morning", "이른 아침 시간대 활동"
-            );
-
-            return scenarioDescriptions.getOrDefault(scenario, scenario);
-
-        } catch (Exception e) {
-            log.warn("Scenario detection failed, using fallback", e);
-            return analyzeTemporalPatternFallback(event);
-        }
-    }
-
-    /**
-     * AI Native: 규칙 기반 Fallback 완전 제거
-     * - 9-18시, 22-6시 등 시간대 분류 규칙 제거
-     * - Scenario Detection 실패 시 LLM 분석 필요 상태 표시
-     * - LLM이 시간 컨텍스트를 직접 분석하여 패턴 판단
-     */
-    private String analyzeTemporalPatternFallback(SecurityEvent event) {
-        log.warn("[Layer2][AI Native] Scenario detection unavailable, temporal pattern analysis delegated to LLM");
-        return "[LLM_ANALYSIS_REQUIRED: temporal pattern detection unavailable]";
-    }
-
-    /**
-     * 유사 이벤트 검색 - Vector Similarity Search
-     */
     private List<String> findSimilarEvents(SecurityEvent event) {
         if (behaviorVectorService == null) {
             return findSimilarEventsFallback(event);
@@ -502,19 +294,31 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
 
     private List<String> findSimilarEventsFallback(SecurityEvent event) {
         List<String> similar = new ArrayList<>();
-        if (redisTemplate != null) {
-            try {
-                Set<String> keys = redisTemplate.keys("event:similar:" + event.getEventType() + ":*");
-                if (keys != null) {
-                    similar = keys.stream()
-                            .limit(5)
-                            .map(key -> key.substring(key.lastIndexOf(":") + 1))
-                            .collect(Collectors.toList());
-                }
-            } catch (Exception e) {
-                log.debug("Failed to find similar events", e);
-            }
+        if (redisTemplate == null) {
+            return similar;
         }
+
+        String pattern = "event:similar:" + event.getEventType() + ":*";
+        int limit = 5;
+
+        try {
+            // Redis SCAN: 점진적 스캔으로 블로킹 방지
+            ScanOptions scanOptions = ScanOptions.scanOptions()
+                    .match(pattern)
+                    .count(100)  // 배치 크기 (한 번에 스캔할 키 수)
+                    .build();
+
+            try (Cursor<String> cursor = redisTemplate.scan(scanOptions)) {
+                while (cursor.hasNext() && similar.size() < limit) {
+                    String key = cursor.next();
+                    String eventId = key.substring(key.lastIndexOf(":") + 1);
+                    similar.add(eventId);
+                }
+            }
+        } catch (Exception e) {
+            log.debug("[Layer2] Failed to find similar events via SCAN", e);
+        }
+
         return similar;
     }
 
@@ -553,8 +357,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
 
             String query = queryBuilder.toString().trim();
 
-            // AI Native: 임계값 최소화 - LLM이 문서 관련성을 직접 판단
-            // 플랫폼은 가능한 모든 컨텍스트를 제공하고, LLM이 가치를 평가함
             SearchRequest searchRequest = SearchRequest.builder()
                     .query(query)
                     .topK(Math.min(15, vectorSearchLimit * 2))
@@ -588,20 +390,11 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         return ctx;
     }
 
-    /**
-     * BehaviorAnalysis 변환 - AI Native: Baseline 필드 포함 (v3.0)
-     */
     private Layer2PromptTemplate.BehaviorAnalysis convertToTemplateBehaviorAnalysis(BehaviorAnalysis behaviorAnalysis) {
         Layer2PromptTemplate.BehaviorAnalysis ctx = new Layer2PromptTemplate.BehaviorAnalysis();
-        ctx.setNormalBehaviorScore(behaviorAnalysis.getNormalBehaviorScore());
-        ctx.setAnomalyIndicators(behaviorAnalysis.getAnomalyIndicators());
-        ctx.setTemporalPattern(behaviorAnalysis.getTemporalPattern());
-        ctx.setSimilarEvents(behaviorAnalysis.getSimilarEvents());
 
-        // AI Native: Baseline 필드 변환 (v3.0)
+        ctx.setSimilarEvents(behaviorAnalysis.getSimilarEvents());
         ctx.setBaselineContext(behaviorAnalysis.getBaselineContext());
-        ctx.setDeviationAnalysis(behaviorAnalysis.getDeviationAnalysis());
-        ctx.setDeviationScore(behaviorAnalysis.getDeviationScore());
         ctx.setBaselineEstablished(behaviorAnalysis.isBaselineEstablished());
 
         return ctx;
@@ -636,15 +429,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         return decision;
     }
 
-    /**
-     * JSON 응답 파싱 (축약 JSON 우선, Jackson 폴백)
-     *
-     * 축약 형식: {"r":0.75,"c":0.85,"a":"E","d":"session anomaly detected"}
-     * 기존 형식: {"riskScore":0.75,"confidence":0.85,"action":"ESCALATE","reasoning":"..."}
-     *
-     * @param jsonResponse LLM이 생성한 JSON 문자열
-     * @return Layer2SecurityResponse 객체
-     */
     private Layer2SecurityResponse parseJsonResponse(String jsonResponse) {
         try {
             // JSON 문자열에서 {}만 추출
@@ -652,7 +436,7 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
 
             // 1단계: 축약 JSON 파싱 우선 시도 (프롬프트 최적화 후 표준 형식)
             Layer2SecurityResponse compactResponse = Layer2SecurityResponse.fromCompactJson(cleanedJson);
-            if (compactResponse != null && isValidResponse(compactResponse)) {
+            if (isValidResponse(compactResponse)) {
                 log.debug("Layer2 compact JSON parsing successful: {}", cleanedJson);
                 // 컬렉션 필드 초기화 (축약 형식에서는 생략됨)
                 if (compactResponse.getMitigationActions() == null) {
@@ -670,21 +454,20 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
                 return validateAndFixResponse(compactResponse);
             }
 
-            // 2단계: 기존 전체 필드명 Jackson 파싱 (하위 호환성)
             log.debug("Layer2 compact parsing failed, falling back to Jackson: {}", cleanedJson);
             JsonNode jsonNode = objectMapper.readTree(cleanedJson);
-
-            // AI Native: LLM 응답에서 필수 필드 추출 (기본값 규칙 제거)
-            // 필드가 없으면 null 반환 -> validateAndFixResponse()에서 NaN 처리
             Double riskScore = jsonNode.has("riskScore") && !jsonNode.get("riskScore").isNull()
                     ? jsonNode.get("riskScore").asDouble() : null;
             Double confidence = jsonNode.has("confidence") && !jsonNode.get("confidence").isNull()
                     ? jsonNode.get("confidence").asDouble() : null;
-            String action = jsonNode.has("action") ? jsonNode.get("action").asText() : "ALLOW";
+            String action = jsonNode.has("action") ? jsonNode.get("action").asText() : "ESCALATE";
             String reasoning = jsonNode.has("reasoning") ? jsonNode.get("reasoning").asText() : "No reasoning provided";
-            String threatCategory = jsonNode.has("threatCategory") ? jsonNode.get("threatCategory").asText() : "UNKNOWN";
+            // AI Native: threatCategory 기본값 제거 - LLM이 분류하지 않으면 마커 표시
+            // "UNKNOWN"은 플랫폼이 분류를 결정하는 것이므로 위반
+            // "[NOT_CLASSIFIED]"는 LLM에게 데이터 부재를 명시적으로 전달
+            String threatCategory = jsonNode.has("threatCategory") && !jsonNode.get("threatCategory").asText().isBlank()
+                    ? jsonNode.get("threatCategory").asText() : "[NOT_CLASSIFIED]";
 
-            // mitigationActions 배열 파싱
             List<String> mitigationActions = new ArrayList<>();
             if (jsonNode.has("mitigationActions") && jsonNode.get("mitigationActions").isArray()) {
                 jsonNode.get("mitigationActions").forEach(node -> mitigationActions.add(node.asText()));
@@ -721,41 +504,13 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         return response.getRiskScore() != null || response.getConfidence() != null;
     }
 
-    /**
-     * JSON 객체 추출 (LLM이 추가 텍스트를 포함할 수 있어서 {} 부분만 추출)
-     */
-    private String extractJsonObject(String text) {
-        if (text == null || text.isEmpty()) {
-            return "{}";
-        }
-
-        int start = text.indexOf('{');
-        int end = text.lastIndexOf('}');
-
-        if (start >= 0 && end > start) {
-            return text.substring(start, end + 1);
-        }
-
-        // JSON 형식이 없으면 빈 객체 반환
-        log.warn("No JSON object found in LLM response, using default: {}", text);
-        return "{}";
-    }
-
-    /**
-     * 기본 Layer2SecurityResponse 생성
-     *
-     * AI Native: 규칙 기반 기본값 제거
-     * - riskScore/confidence는 NaN 사용 (0.5 규칙 제거)
-     * - LLM 분석 불가 상태를 명시적으로 표시
-     * - 플랫폼은 분석 불가 상태를 후속 처리에 전달
-     */
     private Layer2SecurityResponse createDefaultResponse() {
         return Layer2SecurityResponse.builder()
                 .riskScore(Double.NaN)
                 .confidence(Double.NaN)
                 .action("ESCALATE")  // AI Native: 분석 불가 시 상위 Layer로 에스컬레이션
                 .reasoning("[AI Native] Layer 2 LLM analysis unavailable - escalating to Layer 3")
-                .threatCategory("UNKNOWN")
+                .threatCategory("[NOT_CLASSIFIED]")  // AI Native: 플랫폼 분류 대신 마커
                 .behaviorPatterns(new ArrayList<>())
                 .mitigationActions(new ArrayList<>())
                 .sessionAnalysis(new HashMap<>())
@@ -768,14 +523,17 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
      * 문자열을 액션으로 매핑
      */
     private SecurityDecision.Action mapStringToAction(String action) {
-        if (action == null) return SecurityDecision.Action.MONITOR;
+        // AI Native: 알 수 없는 action은 ESCALATE (Zero Trust)
+        // MONITOR는 플랫폼이 임의로 결정하는 것이므로 위반
+        if (action == null) return SecurityDecision.Action.ESCALATE;
         return switch (action.toUpperCase()) {
             case "ALLOW" -> SecurityDecision.Action.ALLOW;
             case "BLOCK" -> SecurityDecision.Action.BLOCK;
             case "MITIGATE" -> SecurityDecision.Action.MITIGATE;
             case "INVESTIGATE" -> SecurityDecision.Action.INVESTIGATE;
             case "ESCALATE" -> SecurityDecision.Action.ESCALATE;
-            default -> SecurityDecision.Action.MONITOR;
+            case "MONITOR" -> SecurityDecision.Action.MONITOR;  // LLM이 명시적으로 MONITOR 반환한 경우만
+            default -> SecurityDecision.Action.ESCALATE;  // AI Native: 불확실 시 에스컬레이션
         };
     }
 
@@ -794,31 +552,28 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         sessionData.put("accessFrequency", sessionContext.getAccessFrequency());
 
         decision.setSessionContext(sessionData);
-
-        // 행동 패턴 정보 추가
         if (decision.getBehaviorPatterns() == null) {
             decision.setBehaviorPatterns(new ArrayList<>());
         }
-        decision.getBehaviorPatterns().addAll(behaviorAnalysis.getAnomalyIndicators());
+        decision.getBehaviorPatterns().addAll(behaviorAnalysis.getSimilarEvents());
     }
 
     /**
      * Layer 1 결정 향상
      */
     private SecurityDecision enhanceLayer1Decision(SecurityDecision layer1Decision, long startTime) {
-        // Layer 1 결정을 기반으로 Layer 2 메타데이터 추가
+        // AI Native: Layer1 신뢰도를 그대로 사용 (플랫폼이 LLM 결정 가공 금지)
         SecurityDecision enhanced = SecurityDecision.builder()
                 .action(layer1Decision.getAction())
                 .riskScore(layer1Decision.getRiskScore())
-                .confidence(layer1Decision.getConfidence() * 0.9) // 신뢰도 약간 감소
+                .confidence(layer1Decision.getConfidence())
                 .analysisTime(startTime)
                 .processingTimeMs(System.currentTimeMillis() - startTime)
                 .processingLayer(2)
                 .eventId(layer1Decision.getEventId())
-                .reasoning("Layer 2 analysis failed, using enhanced Layer 1 decision")
+                .reasoning("[AI Native] Layer 2 analysis failed, using Layer 1 decision unchanged")
                 .build();
 
-        // Layer 1 필드 복사
         enhanced.setMatchedPattern(layer1Decision.getMatchedPattern());
         enhanced.setKnownThreat(layer1Decision.isKnownThreat());
         enhanced.setLlmModel(modelName);
@@ -834,7 +589,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         if (sessionId == null || redisTemplate == null) return;
 
         try {
-            // 세션 활동 기록
             redisTemplate.opsForList().rightPush(
                     "session:actions:" + sessionId,
                     String.format("%s:%s:%s", event.getEventType(),
@@ -842,8 +596,9 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
                             decision.getAction())
             );
 
-            // 위험 점수 업데이트
-            if (decision.getRiskScore() > 0.7) {
+            SecurityDecision.Action sessionAction = decision.getAction();
+            if (sessionAction == SecurityDecision.Action.BLOCK ||
+                sessionAction == SecurityDecision.Action.MITIGATE) {
                 redisTemplate.opsForValue().set(
                         "session:risk:" + sessionId,
                         decision.getRiskScore(),
@@ -856,17 +611,11 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         }
     }
 
-    /**
-     * 벡터 데이터베이스에 저장 (UnifiedVectorService 사용)
-     * 주의: 쓰기 작업이므로 UnifiedVectorService의 통합 저장소 사용
-     */
     private void storeInVectorDatabase(SecurityEvent event, SecurityDecision decision) {
         if (unifiedVectorService == null) return;
 
-        // AI Native: confidence가 유효하지 않으면 저장하지 않음
-        // LLM이 확신하지 않는 분석 결과는 학습 데이터 품질을 저하시킬 수 있음
-        Double confidence = decision.getConfidence();
-        if (confidence == null || Double.isNaN(confidence)) {
+        double confidence = decision.getConfidence();
+        if (Double.isNaN(confidence)) {
             log.debug("Skipping vector storage: confidence not available for event {}", event.getEventId());
             return;
         }
@@ -882,56 +631,35 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
                     decision.getReasoning()
             );
 
+            // Spring AI Document는 null 값을 허용하지 않으므로 기본값 설정 필수
             Map<String, Object> metadata = new HashMap<>();
 
             // 필수 공통 metadata
             metadata.put("documentType", VectorDocumentType.BEHAVIOR.getValue());
-            metadata.put("eventId", event.getEventId());
+            metadata.put("eventId", event.getEventId() != null ? event.getEventId() : "unknown");
             metadata.put("timestamp", LocalDateTime.now().format(java.time.format.DateTimeFormatter.ISO_LOCAL_DATE_TIME));
             metadata.put("userId", event.getUserId() != null ? event.getUserId() : "unknown");
 
             // SecurityEvent 정보
             metadata.put("eventType", event.getEventType() != null ? event.getEventType().toString() : "UNKNOWN");
-            metadata.put("sourceIp", event.getSourceIp());
-            metadata.put("sessionId", event.getSessionId());
+            metadata.put("sourceIp", event.getSourceIp() != null ? event.getSourceIp() : "unknown");
+            metadata.put("sessionId", event.getSessionId() != null ? event.getSessionId() : "unknown");
 
-            // SecurityDecision 정보
-            metadata.put("riskScore", decision.getRiskScore());
-            metadata.put("action", decision.getAction().toString());
-            metadata.put("confidence", decision.getConfidence());
-            metadata.put("threatCategory", decision.getThreatCategory() != null ? decision.getThreatCategory() : "UNKNOWN");
-
-            // Layer3 ThreatIntelligence용 (실제 운영에서는 위협 분석 결과 기반)
-            if (decision.getRiskScore() >= 0.7) {
-                // 고위험: 위협으로 간주
-                metadata.put("threatActor", "SUSPICIOUS-" + (event.getSourceIp() != null ? event.getSourceIp().replace(".", "-") : "UNKNOWN"));
-                metadata.put("campaignId", "AUTO-" + UUID.randomUUID().toString().substring(0, 8));
-                metadata.put("campaignName", "Automated Threat Detection");
-                metadata.put("incidentId", "INC-" + UUID.randomUUID().toString().substring(0, 8));
-                metadata.put("mitreTactic", "TA0043-Reconnaissance");  // 기본 전술
-                metadata.put("assetCriticality", "HIGH");
-            } else {
-                // 저위험: 정상으로 간주
-                metadata.put("threatActor", "NONE");
-                metadata.put("campaignId", "NONE");
-                metadata.put("campaignName", "");
-                metadata.put("incidentId", "");
-                metadata.put("mitreTactic", "");
-                metadata.put("assetCriticality", "LOW");
-            }
-
-            // IOC 지표 (anomalyIndicators가 있으면)
-            if (decision.getReasoning() != null && decision.getReasoning().contains("anomaly")) {
-                metadata.put("iocIndicator", "anomaly_detected");
-            } else {
-                metadata.put("iocIndicator", "");
-            }
+            // SecurityDecision 정보 (LLM이 직접 결정한 값만 저장)
+            // AI Native: NaN은 metadata에 저장 불가 - Double.NaN 체크 후 -1.0으로 대체 (메타데이터 전용)
+            double metaRiskScore = decision.getRiskScore();
+            double metaConfidence = decision.getConfidence();
+            metadata.put("riskScore", Double.isNaN(metaRiskScore) ? -1.0 : metaRiskScore);
+            metadata.put("action", decision.getAction() != null ? decision.getAction().toString() : "ESCALATE");
+            metadata.put("confidence", Double.isNaN(metaConfidence) ? -1.0 : metaConfidence);
+            metadata.put("threatCategory", decision.getThreatCategory() != null ? decision.getThreatCategory() : "[NOT_CLASSIFIED]");
 
             Document document = new Document(content, metadata);
             unifiedVectorService.storeDocument(document);
 
-            // Phase 1: 고위험 이벤트는 별도로 threat 문서 저장
-            if (decision.getRiskScore() >= 0.7 || decision.getThreatCategory() != null && !decision.getThreatCategory().equals("UNKNOWN")) {
+            SecurityDecision.Action vectorAction = decision.getAction();
+            if (vectorAction == SecurityDecision.Action.BLOCK ||
+                vectorAction == SecurityDecision.Action.MITIGATE) {
                 storeThreatDocument(event, decision, content);
             }
 
@@ -940,22 +668,20 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         }
     }
 
-    /**
-     * Phase 1: 위협 패턴 전용 문서 저장 (Layer2 컨텍스트 분석)
-     *
-     * riskScore >= 0.7 또는 threatCategory가 명확한 경우 threat 문서로 별도 저장
-     */
     private void storeThreatDocument(SecurityEvent event, SecurityDecision decision, String analysisContent) {
         try {
             Map<String, Object> threatMetadata = new HashMap<>();
 
             // 위협 전용 documentType (Enum 사용)
             threatMetadata.put("documentType", VectorDocumentType.THREAT.getValue());
-            threatMetadata.put("threatConfirmed", decision.getRiskScore() >= 0.8);
-            threatMetadata.put("riskScore", decision.getRiskScore());
-            threatMetadata.put("behaviorAnomalyScore", decision.getRiskScore());
 
-            // 기본 정보
+            // LLM이 직접 결정한 값만 저장
+            threatMetadata.put("riskScore", decision.getRiskScore());
+            threatMetadata.put("confidence", decision.getConfidence());
+            threatMetadata.put("action", decision.getAction().toString());
+            threatMetadata.put("threatCategory", decision.getThreatCategory() != null ? decision.getThreatCategory() : "UNKNOWN");
+
+            // 이벤트 컨텍스트 (Zero Trust 추적성)
             threatMetadata.put("eventId", event.getEventId());
             threatMetadata.put("timestamp", LocalDateTime.now().format(java.time.format.DateTimeFormatter.ISO_LOCAL_DATE_TIME));
             threatMetadata.put("userId", event.getUserId() != null ? event.getUserId() : "unknown");
@@ -963,28 +689,9 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
             threatMetadata.put("sourceIp", event.getSourceIp());
             threatMetadata.put("sessionId", event.getSessionId());
 
-            // 위협 분류
-            threatMetadata.put("threatType", determineThreatType(decision));
-            threatMetadata.put("threatCategory", decision.getThreatCategory() != null ? decision.getThreatCategory() : "UNKNOWN");
-            threatMetadata.put("riskCategory", decision.getRiskScore() >= 0.9 ? "CRITICAL" : "HIGH");
-
-            // Layer2 특화 정보: 행동 패턴
+            // Layer2 특화 정보: 행동 패턴 (LLM 분석 결과)
             if (decision.getBehaviorPatterns() != null && !decision.getBehaviorPatterns().isEmpty()) {
                 threatMetadata.put("behaviorPatterns", String.join(", ", decision.getBehaviorPatterns()));
-            }
-
-            // MITRE ATT&CK
-            threatMetadata.put("mitreTactic", determineMitreTactic(decision));
-            threatMetadata.put("patternType", decision.getBehaviorPatterns() != null && !decision.getBehaviorPatterns().isEmpty() ? "behavioral_anomaly" : "contextual_risk");
-
-            // Layer 정보
-            threatMetadata.put("processingLayer", "Layer2");
-            threatMetadata.put("confidence", decision.getConfidence());
-            threatMetadata.put("action", decision.getAction().toString());
-
-            // IOC 지표 (행동 패턴 기반)
-            if (decision.getBehaviorPatterns() != null && !decision.getBehaviorPatterns().isEmpty()) {
-                threatMetadata.put("iocIndicators", "behavior:" + String.join("|", decision.getBehaviorPatterns()));
             }
 
             // 위협 설명 (AI 분석 결과 포함)
@@ -1001,62 +708,19 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
             Document threatDoc = new Document(threatDescription, threatMetadata);
             unifiedVectorService.storeDocument(threatDoc);
 
-            log.info("[Layer2] 위협 패턴 저장 완료: userId={}, riskScore={}, threatType={}, behaviorPatterns={}",
-                event.getUserId(), decision.getRiskScore(), threatMetadata.get("threatType"),
+            log.info("[Layer2] 위협 패턴 저장 완료: userId={}, riskScore={}, threatCategory={}, behaviorPatterns={}",
+                event.getUserId(), decision.getRiskScore(), decision.getThreatCategory(),
                 decision.getBehaviorPatterns() != null ? decision.getBehaviorPatterns().size() : 0);
 
         } catch (Exception e) {
             log.warn("[Layer2] 위협 패턴 저장 실패: eventId={}", event.getEventId(), e);
         }
     }
-
-    /**
-     * SecurityDecision 기반 위협 유형 분류
-     *
-     * AI Native 전환:
-     * - 패턴 매칭 규칙 완전 제거
-     * - LLM이 threatCategory를 직접 결정
-     */
-    private String determineThreatType(SecurityDecision decision) {
-        // AI Native: 패턴 매칭 규칙 완전 제거
-        // LLM이 threatCategory를 직접 결정하므로 그대로 반환
-        if (decision.getThreatCategory() != null && !decision.getThreatCategory().isBlank()) {
-            return decision.getThreatCategory();
-        }
-
-        // AI Native: LLM이 threatCategory를 반환하지 않은 경우 null 반환
-        return null;
-    }
-
-    /**
-     * MITRE ATT&CK 전술 매핑
-     *
-     * AI Native 전환:
-     * - 규칙 기반 매핑 완전 제거
-     * - LLM이 mitreTactic을 직접 결정하도록 위임
-     * - SecurityDecision에 mitreTactic 필드 추가 필요
-     */
-    private String determineMitreTactic(SecurityDecision decision) {
-        // AI Native: 규칙 기반 매핑 완전 제거
-        // LLM이 mitreTactic을 직접 결정해야 함
-        // 현재는 null 반환 (PromptTemplate에서 mitreTactic 반환하도록 수정 필요)
-        return null;
-    }
-
-
-
     @Override
     protected String getLayerName() {
         return "Layer2";
     }
 
-    /**
-     * 기본 보안 결정 생성
-     *
-     * AI Native 전환:
-     * - 규칙 기반 기본값 제거
-     * - LLM 분석 필요 상태를 NaN으로 표시
-     */
     private SecurityDecision createDefaultDecision() {
         return SecurityDecision.builder()
                 .action(SecurityDecision.Action.ESCALATE)
@@ -1067,27 +731,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
                 .build();
     }
 
-
-
-    @Override
-    public String getStrategyName() {
-        return "Layer2-Contextual-Strategy";
-    }
-
-    @Override
-    public List<ThreatIndicator> extractIndicators(SecurityEvent event) {
-        // ThreatIndicator 추출 로직
-        return new ArrayList<>();
-    }
-
-    @Override
-    public Map<String, String> mapToFramework(SecurityEvent event) {
-        Map<String, String> mapping = new HashMap<>();
-        mapping.put("framework", "CONTEXTUAL_ANALYSIS");
-        mapping.put("tier", "2");
-        return mapping;
-    }
-
     @Override
     public List<String> getRecommendedActions(SecurityEvent event) {
         List<String> actions = new ArrayList<>();
@@ -1096,101 +739,23 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         return actions;
     }
 
-    /**
-     * AI Native: 규칙 기반 위험 점수 계산 제거
-     * - indicators.size() * 0.15 공식 제거
-     * - LLM이 riskScore를 직접 반환해야 함
-     * - 이 메서드가 호출되면 LLM 분석 결과 없음을 의미
-     */
     @Override
     public double calculateRiskScore(List<ThreatIndicator> indicators) {
         log.warn("[Layer2][AI Native] calculateRiskScore called without LLM analysis - returning NaN");
         return Double.NaN;
     }
 
-    // AI Native 전환: mapRiskScoreToThreatLevel() 규칙 기반 매핑 제거
-    // LLM이 threatLevel을 직접 결정하므로 이 메서드는 더 이상 사용하지 않음
-
     private String mapActionToRecommendation(SecurityDecision.Action action) {
-        switch (action) {
-            case BLOCK:
-                return "BLOCK_IMMEDIATELY";
-            case ALLOW:
-                return "ALLOW";
-            case MITIGATE:
-                return "APPLY_MITIGATION";
-            case INVESTIGATE:
-                return "INVESTIGATE_FURTHER";
-            case ESCALATE:
-                return "ESCALATE_TO_EXPERT";
-            default:
-                return "MONITOR";
-        }
+        return switch (action) {
+            case BLOCK -> "BLOCK_IMMEDIATELY";
+            case ALLOW -> "ALLOW";
+            case MITIGATE -> "APPLY_MITIGATION";
+            case INVESTIGATE -> "INVESTIGATE_FURTHER";
+            case ESCALATE -> "ESCALATE_TO_EXPERT";
+            default -> "MONITOR";
+        };
     }
 
-    private HCADContext convertToHCADContext(SecurityEvent event, SessionContext sessionContext) {
-        return HCADContext.builder()
-                .userId(event.getUserId())
-                .sessionId(sessionContext.getSessionId())
-                .requestPath(eventEnricher.getTargetResource(event).orElse("/unknown"))
-                .httpMethod(eventEnricher.getHttpMethod(event).orElse("GET"))
-                .remoteIp(event.getSourceIp())
-                .userAgent(event.getUserAgent() != null ? event.getUserAgent() : "unknown")
-                .timestamp(event.getTimestamp() != null ?
-                        event.getTimestamp().atZone(java.time.ZoneId.systemDefault()).toInstant() :
-                        java.time.Instant.now())
-                .currentTrustScore(event.getRiskScore() != null ? (1.0 - event.getRiskScore() / 10.0) : 0.5)
-                .recentRequestCount(sessionContext.getRecentActions().size())
-                .isNewSession(sessionContext.getSessionDuration() < 5L)
-                .authenticationMethod(sessionContext.getAuthMethod())
-                .resourceType(classifyResourceType(eventEnricher.getTargetResource(event).orElse("/unknown")))
-                .build();
-    }
-
-    /**
-     * AI Native: 패턴 매칭 규칙 완전 제거
-     * - contains("/admin"), "/api", "/secure", "/public" 규칙 제거
-     * - 경로를 그대로 반환하여 LLM이 리소스 유형 분류
-     * - LLM이 경로 컨텍스트를 분석하여 직접 판단
-     */
-    private String classifyResourceType(String path) {
-        // AI Native: 패턴 매칭 제거, raw 경로 그대로 반환
-        return path;
-    }
-
-    private BaselineVector getOrCreateBaseline(String userId) {
-        if (redisTemplate == null) return null;
-
-        try {
-            String key = "hcad:baseline:" + userId;
-            BaselineVector baseline = (BaselineVector) redisTemplate.opsForValue().get(key);
-            if (baseline == null) {
-                baseline = BaselineVector.builder()
-                        .userId(userId)
-                        .confidence(0.1)
-                        .updateCount(0L)
-                        .build();
-            }
-            return baseline;
-        } catch (Exception e) {
-            log.debug("Failed to get baseline vector", e);
-            return null;
-        }
-    }
-
-    private boolean isIpInNormalRange(String ip, BaselineVector baseline) {
-        if (baseline == null || ip == null) return true;
-
-        String[] normalRanges = baseline.getNormalIpRanges();
-        if (normalRanges == null || normalRanges.length == 0) return true;
-
-        String ipPrefix = ip.substring(0, Math.min(ip.lastIndexOf('.'), ip.length()));
-        return Arrays.stream(normalRanges).anyMatch(range -> ipPrefix.startsWith(range));
-    }
-
-    /**
-     * 세션 컨텍스트 클래스
-     */
     private class SessionContext {
         private String sessionId;
         private String userId;
@@ -1201,8 +766,7 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         private int accessFrequency = 0;
 
         public boolean isValid() {
-            return startTime != null &&
-                    startTime.isAfter(LocalDateTime.now().minusHours(24));
+            return startTime != null;
         }
 
         public void addEvent(SecurityEvent event) {
@@ -1220,13 +784,9 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         }
 
         public String getAccessPattern() {
-            if (accessFrequency < 10) return "Low activity";
-            if (accessFrequency < 50) return "Normal activity";
-            if (accessFrequency < 200) return "High activity";
-            return "Excessive activity";
+            return "AccessFrequency: " + accessFrequency;
         }
 
-        // Getters and setters
         public String getSessionId() { return sessionId; }
         public void setSessionId(String sessionId) { this.sessionId = sessionId; }
 
@@ -1248,16 +808,6 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         public int getAccessFrequency() { return accessFrequency; }
     }
 
-    /**
-     * 행동 분석 결과
-     */
-    /**
-     * AI 응답 검증 및 수정
-     *
-     * AI Native: LLM 응답을 가공 없이 그대로 사용
-     * - confidence/riskScore가 null이면 Double.NaN 사용 (규칙 기반 기본값 금지)
-     * - LLM이 응답하지 않은 것은 "분석 불가" 상태로 명시
-     */
     private Layer2SecurityResponse validateAndFixResponse(Layer2SecurityResponse response) {
         if (response == null) {
             return createDefaultResponse();
@@ -1275,9 +825,10 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
             response.setRiskScore(Double.NaN);
         }
 
-        // threatCategory 검증 (null인 경우만)
-        if (response.getThreatCategory() == null || response.getThreatCategory().equals("none")) {
-            response.setThreatCategory("UNKNOWN");
+        // AI Native: threatCategory가 null이면 마커 표시 (플랫폼 분류 금지)
+        // "UNKNOWN"은 플랫폼이 분류를 결정하는 것이므로 위반
+        if (response.getThreatCategory() == null || response.getThreatCategory().isBlank()) {
+            response.setThreatCategory("[NOT_CLASSIFIED]");
         }
 
         // mitigationActions 검증
@@ -1288,40 +839,18 @@ public class Layer2ContextualStrategy extends AbstractTieredStrategy {
         return response;
     }
 
+
     private static class BehaviorAnalysis {
-        private double normalBehaviorScore;
-        private List<String> anomalyIndicators = new ArrayList<>();
-        private String temporalPattern;
         private List<String> similarEvents = new ArrayList<>();
 
-        // AI Native: Baseline 상세 정보 필드 (v3.0)
         private String baselineContext;
-        private String deviationAnalysis;
-        private double deviationScore;
         private boolean baselineEstablished;
-
-        // Getters and setters
-        public double getNormalBehaviorScore() { return normalBehaviorScore; }
-        public void setNormalBehaviorScore(double score) { this.normalBehaviorScore = score; }
-
-        public List<String> getAnomalyIndicators() { return anomalyIndicators; }
-        public void setAnomalyIndicators(List<String> indicators) { this.anomalyIndicators = indicators; }
-
-        public String getTemporalPattern() { return temporalPattern; }
-        public void setTemporalPattern(String pattern) { this.temporalPattern = pattern; }
 
         public List<String> getSimilarEvents() { return similarEvents; }
         public void setSimilarEvents(List<String> events) { this.similarEvents = events; }
 
-        // AI Native: Baseline 필드 Getter/Setter
         public String getBaselineContext() { return baselineContext; }
         public void setBaselineContext(String baselineContext) { this.baselineContext = baselineContext; }
-
-        public String getDeviationAnalysis() { return deviationAnalysis; }
-        public void setDeviationAnalysis(String deviationAnalysis) { this.deviationAnalysis = deviationAnalysis; }
-
-        public double getDeviationScore() { return deviationScore; }
-        public void setDeviationScore(double deviationScore) { this.deviationScore = deviationScore; }
 
         public boolean isBaselineEstablished() { return baselineEstablished; }
         public void setBaselineEstablished(boolean baselineEstablished) { this.baselineEstablished = baselineEstablished; }
